first commit installations and Project setup

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+:root{
+    --box-shadow:1px 1px 3px 1px #746f6f;
+    --myprimary:#dc3545;
+}
+html, body { height: 100%; }
+*, body { margin: 0; font-family: "poppins", sans-serif; }
