--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<div class="container mt-3">
-  <button class="btn btn-success">update</button>
-  <button class="btn btn-danger ms-2">Delete</button>
-</div>
+<app-header></app-header>
+<router-outlet></router-outlet>
+<app-footer></app-footer>
