--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,1 +1,39 @@
-<p>header works!</p>
+<mat-toolbar class="header-sm">
+  <span class="spacer"></span>
+  <div class="top-menu">
+    <span
+      ><i class="fa fa-phone" aria-hidden="true" style="font-size: 20px"></i
+      >:(+91)8367476666</span
+    >
+    <span>AboutUs</span>
+    <span>ContactUs</span>
+    <span><button mat-stroked-button color="warn">Login</button></span>
+  </div>
+</mat-toolbar>
+<mat-toolbar class="header bg-danger">
+  <span class="logo">
+    <img src="../../.././assets/images/mean.png" />
+  </span>
+  <nav class="navbar animate__animated animate__bounceInLeft">
+    <a href="">Home</a>
+    <a href="">Men</a>
+    <a href="">Women</a>
+    <a href="">Kids</a>
+  </nav>
+  <span class="spacer"> </span>
+  <span>
+    <mat-icon
+      type="button"
+      style="
+        font-size: 30px;
+        margin-right: 2rem;
+        padding-top: 10px;
+        color: azure;
+      "
+      matBadge="0"
+      matBadgeColor="accent"
+      matBadgeOverlap="false"
+      >add_shopping_cart</mat-icon
+    >
+  </span>
+</mat-toolbar>
