main Banner part with carousel completed

--- a/src/app/pages/banner/banner.component.html
+++ b/src/app/pages/banner/banner.component.html
@@ -1,1 +1,85 @@
-<p>banner works!</p>
+<div class="container-fluid">
+  <div class="row my-3">
+    <!-- Carousel starts -->
+    <div class="col-sm-8">
+      <div
+        id="carouselIndicators"
+        class="carousel slide"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-indicators">
+          <button
+            type="button"
+            data-bs-target="#carouselIndicators"
+            data-bs-slide-to="0"
+            class="active"
+            area-current="true"
+            area-label="slide-1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselIndicators"
+            data-bs-slide-to="1"
+            area-current="true"
+            area-label="slide-2"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselIndicators"
+            data-bs-slide-to="3"
+            class="active"
+            area-current="true"
+            area-label="slide-3"
+          ></button>
+        </div>
+        <div class="carousel-inner">
+          @for (image of images; track image) {
+          <div class="carousel-item active">
+            <img
+              src="{{ image }}"
+              class="d-block w-100 h-20"
+              style="border-radius: 10px"
+            />
+          </div>
+          }
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselIndicators"
+          data-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselIndicators"
+          data-slide="next"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="row">
+        <div class="col-sm-12 mb-3">
+          <img
+            src="../../../assets/banner/b4.png"
+            class="d-block w-100 h-100"
+            style="border-radius: 0"
+          />
+        </div>
+        <div class="col-sm-12 mb-3">
+          <img
+            src="../../../assets/banner/b5.png"
+            class="d-block w-100 h-100"
+            style="border-radius: 0px"
+          />
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
