trends,brands,Footer pages completed

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,1 +1,195 @@
-<p>footer works!</p>
+<footer class="footer">
+  <section class="py-4 py-md-5 py-xl-8 bg-light border-top">
+    <div class="container-fluid overflow-hidden">
+      <div class="row gy-4 gy-lg-0">
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="widget">
+            <h6 class="widget-title mb-4 text-danger">Get in Touch</h6>
+            <address class="mb-4">
+              Nandyal - 518502,<br />
+              Andhra Pradesh, <br />India.
+            </address>
+            <p class="mb-1">
+              <a class="link-secondary text-decoration-none"
+                >(+91) 91822 56249</a
+              >
+            </p>
+            <p class="mb-0">
+              <a
+                class="link-secondary text-decoration-none"
+                href="mailto:demo@yourdomain.com"
+                ><i class="fa fa-envelope" style="font-size: 16px"></i>
+                support&commat;rsktechminds.com</a
+              >
+            </p>
+          </div>
+        </div>
+        <div class="col-12 col-sm-6 col-md-3 col-lg-2">
+          <div class="widget">
+            <h6 class="widget-title mb-4 text-danger">Services</h6>
+            <ul class="list-unstyled">
+              <li class="mb-2">
+                <a href="#!" class="link-secondary text-decoration-none"
+                  >AI Solutions</a
+                >
+              </li>
+              <li class="mb-2">
+                <a href="#!" class="link-secondary text-decoration-none"
+                  >Digital Marketing</a
+                >
+              </li>
+              <li class="mb-2">
+                <a href="#!" class="link-secondary text-decoration-none"
+                  >App Development</a
+                >
+              </li>
+              <li class="mb-2">
+                <a href="#!" class="link-secondary text-decoration-none"
+                  >SEO Consultancy</a
+                >
+              </li>
+              <li class="mb-0">
+                <a href="#!" class="link-secondary text-decoration-none"
+                  >Web Design</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-12 col-sm-6 col-md-3 col-lg-2">
+          <div class="widget">
+            <h6 class="widget-title mb-4 text-danger">Company</h6>
+            <ul class="list-unstyled">
+              <li class="mb-2">
+                <a href="#!" class="link-secondary text-decoration-none"
+                  >About</a
+                >
+              </li>
+              <li class="mb-2">
+                <a href="#!" class="link-secondary text-decoration-none"
+                  >Contact</a
+                >
+              </li>
+              <li class="mb-2">
+                <a href="#!" class="link-secondary text-decoration-none"
+                  >Advertise</a
+                >
+              </li>
+              <li class="mb-2">
+                <a href="#!" class="link-secondary text-decoration-none"
+                  >Terms of Service</a
+                >
+              </li>
+              <li class="mb-0">
+                <a href="#!" class="link-secondary text-decoration-none"
+                  >Privacy Policy</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-12 col-lg-4">
+          <div class="widget">
+            <h6 class="widget-title mb-4 text-danger">Our Newsletter</h6>
+            <p class="mb-4">
+              Subscribe to our newsletter to get our news & discounts delivered
+              to you.
+            </p>
+            <form action="#!">
+              <div class="row gy-4">
+                <div class="col-12">
+                  <div class="input-group">
+                    <span class="input-group-text" id="email-newsletter-addon">
+                      <i class="fa fa-envelope" style="font-size: 16px"></i>
+                    </span>
+                    <input
+                      type="email"
+                      class="form-control"
+                      id="email-newsletter"
+                      value=""
+                      placeholder="Email Address"
+                      aria-label="email-newsletter"
+                      aria-describedby="email-newsletter-addon"
+                      required
+                    />
+                  </div>
+                </div>
+                <div class="col-12">
+                  <div class="d-grid">
+                    <button class="btn btn-danger" type="submit">
+                      Subscribe
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <div class="bg-light py-4 py-md-5 py-xl-8 border-top border-light-subtle">
+    <div class="container-fluid overflow-hidden">
+      <div class="row gy-4 gy-md-0">
+        <div class="col-xs-12 col-sm-6 col-md-4 order-0 order-md-0">
+          <div class="footer-logo-wrapper text-center text-sm-start">
+            <a href="#!" class="text-danger text-decoration-none">
+              rsktechminds.com
+            </a>
+          </div>
+        </div>
+
+        <div class="col-xs-12 col-md-4 order-2 order-md-1">
+          <div class="footer-copyright-wrapper text-center">
+            &copy; 2024. All Rights Reserved.
+          </div>
+          <div class="credits text-secondary text-center mt-2 fs-7">
+            Built by
+            <a class="link-primary text-decoration-none text-danger"
+              >Satish Konduru</a
+            >
+            with <span class="text-danger fs-4">&#9829;</span>
+          </div>
+        </div>
+
+        <div class="col-xs-12 col-sm-6 col-md-4 order-1 order-md-2">
+          <ul class="nav justify-content-center justify-content-sm-end">
+            <li class="nav-item">
+              <a class="nav-link link-dark" href="#!">
+                <i
+                  class="fa fa-facebook"
+                  aria-hidden="true"
+                  style="font-size: 24px"
+                ></i>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link link-dark" href="#!">
+                <i
+                  class="fa fa-youtube-play"
+                  aria-hidden="true"
+                  style="font-size: 24px"
+                ></i>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link link-dark" href="#!">
+                <i class="fa fa-twitter" style="font-size: 24px"></i>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link link-dark" href="#!">
+                <i
+                  class="fa fa-instagram"
+                  aria-hidden="true"
+                  style="font-size: 24px"
+                ></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
