--- a/src/styles.css
+++ b/src/styles.css
@@ -4,3 +4,23 @@
 }
 html, body { height: 100%; }
 *, body { margin: 0; font-family: "poppins", sans-serif; }
+/* .success-snackbar{
+background-color: green;
+color: #fff;
+}
+.error-snackbar{
+    background-color: #dc3545;
+    color: #fff;
+} */
+.mat-mdc-snack-bar-container{
+    &.error-snackbar{
+        --mdc-snackbar-container-color:#ac0e0e !important;
+        --mdc-snackbar-supporting-text-color:#fff !important
+    }
+}
+.mat-mdc-snack-bar-container{
+    &.success-snackbar{
+        --mdc-snackbar-container-color:#218503 !important;
+        --mdc-snackbar-supporting-text-color:#fff !important;
+    }
+}
