Admin-dashbord sidenav list -items completed

--- a/src/app/modules/admin/dashboard/dashboard.component.css
+++ b/src/app/modules/admin/dashboard/dashboard.component.css
@@ -14,3 +14,9 @@
 .menuItem{
     color: red !important
 }
+::ng-deep .mat-expansion-panel-header{
+    padding: 16px!important
+}
+mat-icon{
+    color: #000;
+}
